--- a/inst/tutorials/lezione_01/lezione_01.html
+++ b/inst/tutorials/lezione_01/lezione_01.html
@@ -199,19 +199,19 @@ session$onSessionEnded(function() {
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "quiz-1", question = structure("Il termine R si riferisce a:", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_eb08745", 
+"character")), answers = list(structure(list(id = "lnr_ans_7e326f2", 
     option = "Ad un linguaggio di programmazione", value = "Ad un linguaggio di programmazione", 
     label = structure("Ad un linguaggio di programmazione", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_f03e2b4", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_27c1163", 
     option = "Ad un software", value = "Ad un software", label = structure("Ad un software", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_3820943", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_895d2c0", 
     option = "Ad un linguaggio di programmazione e ad un software", 
     value = "Ad un linguaggio di programmazione e ad un software", 
     label = structure("Ad un linguaggio di programmazione e ad un software", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_bcffe5f", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_593bc1b", 
     option = "Ad un grande mistero universale", value = "Ad un grande mistero universale", 
     label = structure("Ad un grande mistero universale", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
@@ -222,28 +222,28 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), incorrect = structure("Incorrect", html = TRUE, class = c("html", 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "quiz-1-answer", question = "quiz-1"), loading = structure("<strong>Loading:<\u002fstrong> \nIl termine R si riferisce a:\n<br/><br/><br/>", html = TRUE, class = c("html", 
-"character")), random_answer_order = TRUE, allow_retry = FALSE, 
-    seed = 174446821.418767, options = list()), class = c("learnr_radio", 
+"character")), random_answer_order = TRUE, allow_retry = TRUE, 
+    seed = 1507626807.29796, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_checkbox", label = "quiz-2", question = structure("R permette di: (più di una risposta potrebbe essere corretta)", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_4290b37", 
+"character")), answers = list(structure(list(id = "lnr_ans_b3f179c", 
     option = "Eseguire analisi statistiche", value = "Eseguire analisi statistiche", 
     label = structure("Eseguire analisi statistiche", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_a8dfab9", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_6b14712", 
     option = "Creare applicazioni", value = "Creare applicazioni", 
     label = structure("Creare applicazioni", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_a412c2f", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_fbee91d", 
     option = "Creare siti web", value = "Creare siti web", label = structure("Creare siti web", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_9385431", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_239b52a", 
     option = "Scrivere libri", value = "Scrivere libri", label = structure("Scrivere libri", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_eaaa3fd", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_4492c0a", 
     option = "Creare presentazioni in Powerpoint", value = "Creare presentazioni in Powerpoint", 
     label = structure("Creare presentazioni in Powerpoint", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
@@ -254,26 +254,26 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_checkbox", lab
 "character")), incorrect = structure("Incorrect", html = TRUE, class = c("html", 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "quiz-2-answer", question = "quiz-2"), loading = structure("<strong>Loading:<\u002fstrong> \nR permette di: (più di una risposta potrebbe essere corretta)\n<br/><br/><br/>", html = TRUE, class = c("html", 
-"character")), random_answer_order = TRUE, allow_retry = FALSE, 
-    seed = 1093100789.99099, options = list()), class = c("learnr_checkbox", 
+"character")), random_answer_order = TRUE, allow_retry = TRUE, 
+    seed = 637603209.203093, options = list()), class = c("learnr_checkbox", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "quiz2-1", question = structure("I pacchetti di R sono: ", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_1442419", 
+"character")), answers = list(structure(list(id = "lnr_ans_de20c4b", 
     option = "Collezioni di funzioni", value = "Collezioni di funzioni", 
     label = structure("Collezioni di funzioni", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_d9705c5", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_2fe9b7", 
     option = "Una complicazione inutile", value = "Una complicazione inutile", 
     label = structure("Una complicazione inutile", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_9729f8b", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_7b80b40", 
     option = "Collezioni di variabili", value = "Collezioni di variabili", 
     label = structure("Collezioni di variabili", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_a464c73", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_b8efb81", 
     option = "Collezioni di dati", value = "Collezioni di dati", 
     label = structure("Collezioni di dati", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
@@ -284,25 +284,25 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), incorrect = structure("Incorrect", html = TRUE, class = c("html", 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "quiz2-1-answer", question = "quiz2-1"), loading = structure("<strong>Loading:<\u002fstrong> \nI pacchetti di R sono: \n<br/><br/><br/>", html = TRUE, class = c("html", 
-"character")), random_answer_order = TRUE, allow_retry = FALSE, 
-    seed = 297510116.361461, options = list()), class = c("learnr_radio", 
+"character")), random_answer_order = TRUE, allow_retry = TRUE, 
+    seed = 458249446.786611, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "quiz2-2", question = structure("Che cos&#39;è Bioconductor?", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_de526d5", 
+"character")), answers = list(structure(list(id = "lnr_ans_143cd43", 
     option = "Un conduttore biologico", value = "Un conduttore biologico", 
     label = structure("Un conduttore biologico", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_24e43ec", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_8ccb13a", 
     option = "Un software", value = "Un software", label = structure("Un software", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_f221666", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_944b99e", 
     option = "Strumenti per analisi di dati biologicie", value = "Strumenti per analisi di dati biologicie", 
     label = structure("Strumenti per analisi di dati biologicie", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_a340e31", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_a3a3400", 
     option = "Un gruppo per biologi nerd", value = "Un gruppo per biologi nerd", 
     label = structure("Un gruppo per biologi nerd", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
@@ -313,24 +313,24 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), incorrect = structure("Incorrect", html = TRUE, class = c("html", 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "quiz2-2-answer", question = "quiz2-2"), loading = structure("<strong>Loading:<\u002fstrong> \nChe cos&#39;è Bioconductor?\n<br/><br/><br/>", html = TRUE, class = c("html", 
-"character")), random_answer_order = TRUE, allow_retry = FALSE, 
-    seed = 935521282.064364, options = list()), class = c("learnr_radio", 
+"character")), random_answer_order = TRUE, allow_retry = TRUE, 
+    seed = 519609982.258038, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "quiz3-1", question = structure("RStudio è:", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_2453358", 
+"character")), answers = list(structure(list(id = "lnr_ans_b0d1cd7", 
     option = "Un pacchetto di R", value = "Un pacchetto di R", 
     label = structure("Un pacchetto di R", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_ce21c7d", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_f405238", 
     option = "Un software", value = "Un software", label = structure("Un software", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_147799e", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_8467f2a", 
     option = "Un'azienda", value = "Un'azienda", label = structure("Un&#39;azienda", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_9ce92c5", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_3941bc3", 
     option = "Un hardware", value = "Un hardware", label = structure("Un hardware", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -341,23 +341,23 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "quiz3-1-answer", question = "quiz3-1"), loading = structure("<strong>Loading:<\u002fstrong> \nRStudio è:\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 1897413021.11645, options = list()), class = c("learnr_radio", 
+    seed = 17583950.9918118, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "quiz3-2", question = structure("RStudio IDE (integrated development environment) è:", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_1d3f37", 
+"character")), answers = list(structure(list(id = "lnr_ans_238cbc0", 
     option = "Un pacchetto di R", value = "Un pacchetto di R", 
     label = structure("Un pacchetto di R", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_5224a8", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_c262bb7", 
     option = "Un software", value = "Un software", label = structure("Un software", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_7784736", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_10c9918", 
     option = "Un'azienda", value = "Un'azienda", label = structure("Un&#39;azienda", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_bab817c", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_403b8b", 
     option = "Un hardware", value = "Un hardware", label = structure("Un hardware", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -368,25 +368,25 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "quiz3-2-answer", question = "quiz3-2"), loading = structure("<strong>Loading:<\u002fstrong> \nRStudio IDE (integrated development environment) è:\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 1006489935.53132, options = list()), class = c("learnr_radio", 
+    seed = 319353811.351289, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "quiz3-3", question = structure("Che cos&#39;è la console in RStudio IDE?", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_1f23613", 
+"character")), answers = list(structure(list(id = "lnr_ans_90ec625", 
     option = "La pagina dove ricercare aiuto", value = "La pagina dove ricercare aiuto", 
     label = structure("La pagina dove ricercare aiuto", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = structure("Quella si chiama HELP", html = TRUE, class = c("html", 
     "character"))), class = c("tutorial_question_answer", "tutorial_quiz_answer"
-)), structure(list(id = "lnr_ans_1e55346", option = "La finestra dove corre R", 
+)), structure(list(id = "lnr_ans_1045ccf", option = "La finestra dove corre R", 
     value = "La finestra dove corre R", label = structure("La finestra dove corre R", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_6ab59be", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_95c739c", 
     option = "La finestra dove scrivere il mio codice", value = "La finestra dove scrivere il mio codice", 
     label = structure("La finestra dove scrivere il mio codice", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_7e7bce1", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_59e873e", 
     option = "Il posto dove vengono visualizzati i grafici", 
     value = "Il posto dove vengono visualizzati i grafici", label = structure("Il posto dove vengono visualizzati i grafici", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = structure("Quella si chiama PLOT", html = TRUE, class = c("html", 
@@ -399,7 +399,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "quiz3-3-answer", question = "quiz3-3"), loading = structure("<strong>Loading:<\u002fstrong> \nChe cos&#39;è la console in RStudio IDE?\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 767138880.142773, options = list()), class = c("learnr_radio", 
+    seed = 1666320061.72406, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  <!--html_preserve-->
