Update vettori e manipolazione

--- a/inst/tutorials/lezione_02_vettori/lezione_02_vettori.html
+++ b/inst/tutorials/lezione_02_vettori/lezione_02_vettori.html
@@ -359,7 +359,7 @@ animali[c(1, 1, 1, 2, 2, 3, 4, 4, 5)]</code></pre>
 <div class="tutorial-exercise" data-label="con1" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code># Crea un vettore (val) che contenga i seguenti valori:
 # 10, 20, 30, 40, 50, 60, 70, 80, 90, 100
-
+val &lt;- seq(___, ___, ___)
 # Estrai dal vettore val tutti i valori maggiori di 30</code></pre>
 <script type="application/json" data-ui-opts="1">{"engine":"r","has_checker":false,"caption":"<span data-i18n=\"text.enginecap\" data-i18n-opts=\"{&quot;engine&quot;:&quot;R&quot;}\">R Code<\/span>"}</script>
 </div>
@@ -695,16 +695,16 @@ learnr:::store_exercise_cache(structure(list(global_setup = structure(c("library
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "letter-a-1", question = structure("A quale classe appartiene num_char", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_93f76f8", 
+"character")), answers = list(structure(list(id = "lnr_ans_c246453", 
     option = "numeric", value = "numeric", label = structure("numeric", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_5f7c29f", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_7886e71", 
     option = "logic", value = "logic", label = structure("logic", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_aebedad", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_4fe79a3", 
     option = "character", value = "character", label = structure("character", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_90f6bfc", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_693e46a", 
     option = "R", value = "R", label = structure("R", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -715,22 +715,22 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "letter-a-1-answer", question = "letter-a-1"), loading = structure("<strong>Loading:<\u002fstrong> \nA quale classe appartiene num_char\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 777505944.137946, options = list()), class = c("learnr_radio", 
+    seed = 751177574.150206, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "letter-a-2", question = structure("A quale classe appartiene num_logical", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_534b54c", 
+"character")), answers = list(structure(list(id = "lnr_ans_d4086c2", 
     option = "character", value = "character", label = structure("character", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_aa0b7fe", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_2f953b3", 
     option = "logic", value = "logic", label = structure("logic", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_186b59d", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_48df6c", 
     option = "numeric", value = "numeric", label = structure("numeric", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_9a5f83b", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_1680572", 
     option = "R", value = "R", label = structure("R", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -741,22 +741,22 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "letter-a-2-answer", question = "letter-a-2"), loading = structure("<strong>Loading:<\u002fstrong> \nA quale classe appartiene num_logical\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 2121487591.51211, options = list()), class = c("learnr_radio", 
+    seed = 152462107.429004, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "letter-a-3", question = structure("A quale classe appartiene char_logical", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_b697120", 
+"character")), answers = list(structure(list(id = "lnr_ans_2feb2b2", 
     option = "numeric", value = "numeric", label = structure("numeric", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_cfcaf0e", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_e067df", 
     option = "logic", value = "logic", label = structure("logic", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_4416b6c", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_d897612", 
     option = "character", value = "character", label = structure("character", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_7e3752", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_1f7fcce", 
     option = "R", value = "R", label = structure("R", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -767,22 +767,22 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "letter-a-3-answer", question = "letter-a-3"), loading = structure("<strong>Loading:<\u002fstrong> \nA quale classe appartiene char_logical\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 2133774633.00638, options = list()), class = c("learnr_radio", 
+    seed = 1935103000.5989, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "letter-a-4", question = structure("A quale classe appartiene tricky", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_fc90a9c", 
+"character")), answers = list(structure(list(id = "lnr_ans_a46ae05", 
     option = "numeric", value = "numeric", label = structure("numeric", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_ccd26a9", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_2128a45", 
     option = "logic", value = "logic", label = structure("logic", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_f9ad407", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_a20f503", 
     option = "character", value = "character", label = structure("character", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_9378e77", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_db19e4c", 
     option = "R", value = "R", label = structure("R", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
 "tutorial_quiz_answer"))), button_labels = list(submit = structure("<span data-i18n=\"button.questionsubmit\">Submit Answer<\u002fspan>", html = TRUE, class = c("html", 
@@ -793,25 +793,25 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "letter-a-4-answer", question = "letter-a-4"), loading = structure("<strong>Loading:<\u002fstrong> \nA quale classe appartiene tricky\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 788095401.633014, options = list()), class = c("learnr_radio", 
+    seed = 337501647.342839, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "letter-a-5", question = structure("Come abbiamo visto, se creaiamo dei vettori con elementi misti, questi vengono &#39;costretti&#39; in una singola classe. Sapresti indicare la priorità delle diverse classi", html = TRUE, class = c("html", 
-"character")), answers = list(structure(list(id = "lnr_ans_acf23c8", 
+"character")), answers = list(structure(list(id = "lnr_ans_cebaff3", 
     option = "character > logical > numeric", value = "character > logical > numeric", 
     label = structure("character &gt; logical &gt; numeric", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_9854bf6", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_6ef1b5f", 
     option = "logic > character > numeric", value = "logic > character > numeric", 
     label = structure("logic &gt; character &gt; numeric", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_2085979", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_37a8e47", 
     option = "character > numeric > logical", value = "character > numeric > logical", 
     label = structure("character &gt; numeric &gt; logical", html = TRUE, class = c("html", 
     "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-"tutorial_quiz_answer")), structure(list(id = "lnr_ans_f61614b", 
+"tutorial_quiz_answer")), structure(list(id = "lnr_ans_55d07df", 
     option = "numeric > character > logical", value = "numeric > character > logical", 
     label = structure("numeric &gt; character &gt; logical", html = TRUE, class = c("html", 
     "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
@@ -823,7 +823,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
 "character")), message = NULL, post_message = NULL), ids = list(
     answer = "letter-a-5-answer", question = "letter-a-5"), loading = structure("<strong>Loading:<\u002fstrong> \nCome abbiamo visto, se creaiamo dei vettori con elementi misti, questi vengono &#39;costretti&#39; in una singola classe. Sapresti indicare la priorità delle diverse classi\n<br/><br/><br/>", html = TRUE, class = c("html", 
 "character")), random_answer_order = TRUE, allow_retry = TRUE, 
-    seed = 906484106.077885, options = list()), class = c("learnr_radio", 
+    seed = 2011199254.06346, options = list()), class = c("learnr_radio", 
 "tutorial_question")), session = session)
 </script>
  
@@ -989,7 +989,7 @@ output$`tutorial-exercise-con1-output` <- renderUI({
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::store_exercise_cache(structure(list(global_setup = structure(c("library(learnr)", 
 ""), chunk_opts = list(label = "setup", include = FALSE, indent = "    ")), 
-    setup = NULL, chunks = list(list(label = "con1", code = "# Crea un vettore (val) che contenga i seguenti valori:\n# 10, 20, 30, 40, 50, 60, 70, 80, 90, 100\n\n# Estrai dal vettore val tutti i valori maggiori di 30\n", 
+    setup = NULL, chunks = list(list(label = "con1", code = "# Crea un vettore (val) che contenga i seguenti valori:\n# 10, 20, 30, 40, 50, 60, 70, 80, 90, 100\nval <- seq(___, ___, ___)\n# Estrai dal vettore val tutti i valori maggiori di 30\n", 
         opts = list(label = "\"con1\"", exercise = "TRUE"), engine = "r")), 
     code_check = NULL, error_check = NULL, check = NULL, solution = NULL, 
     options = list(eval = FALSE, echo = TRUE, results = "markup", 
@@ -1009,7 +1009,8 @@ learnr:::store_exercise_cache(structure(list(global_setup = structure(c("library
         message = TRUE, render = NULL, ref.label = NULL, child = NULL, 
         engine = "r", split = FALSE, include = TRUE, purl = TRUE, 
         max.print = 1000, label = "con1", exercise = TRUE, code = c("# Crea un vettore (val) che contenga i seguenti valori:", 
-        "# 10, 20, 30, 40, 50, 60, 70, 80, 90, 100", "", "# Estrai dal vettore val tutti i valori maggiori di 30", 
+        "# 10, 20, 30, 40, 50, 60, 70, 80, 90, 100", "val <- seq(___, ___, ___)", 
+        "# Estrai dal vettore val tutti i valori maggiori di 30", 
         ""), out.width.px = 624, out.height.px = 384, params.src = "con1, exercise=TRUE", 
         fig.num = 0, exercise.df_print = "paged", exercise.checker = "NULL"), 
     engine = "r"), class = "tutorial_exercise"))
